--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -2,8 +2,8 @@
 <nav>
     <ul class="sidebar">
         <li><a href="#"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg></a></li>
-        <li><a href="{{ path('user_panel') }}">{{ app.user }} <i class="ti ti-user-filled"></i></a></li>
-        <li><a href="{{ path('app_logout') }}">Log Out <i class="ti ti-logout"></i></a></li>
+        <li><a href="{{ path('user_panel') }}"><i class="ti ti-user-filled"></i> {{ app.user }} </a></li>
+        <li><a href="{{ path('app_logout') }}"><i class="ti ti-logout"></i>Log Out</a></li>
     </ul>
     <ul class="navBar">
         <li>
