--- a/templates/Schedule/modificar.html.twig
+++ b/templates/Schedule/modificar.html.twig
@@ -6,7 +6,10 @@
             <h2 class="titulo">Añadir horario</h2>
             {{ form_start(form) }}
             {{ form_widget(form) }}
-            <button type="submit" class="primaryButton">Guardar</button>
+            <div class="button_container">
+                <button type="submit" class="primaryButton">Guardar</button>
+                <a href="{{ path('schedule_main') }}" class="secondaryButton">Volver</a>
+            </div>
             {{ form_end(form) }}
         </div>
     </div>
