--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,10 +8,10 @@
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
             <link href="{{ asset('css/reset.css')}}" type="text/css" rel="stylesheet">
-            <link href="{{ asset('css/index.css')}}" type="text/css" rel="stylesheet">
             <link href="{{ asset('css/navbar.css')}}" type="text/css" rel="stylesheet">
             <link href="{{ asset('css/sweetAlert.css')}}" type="text/css" rel="stylesheet">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
+            <link rel="stylesheet" href="{{ asset('build/app.css') }}">
             <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
         {% endblock %}
 
@@ -21,6 +21,7 @@
             <script type="text/javascript" src="{{ asset('js/sidebar.js') }}"></script>
             <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+            <script src="{{ asset('build/app.js') }}"></script>
         {% endblock %}
     </head>
     <body>
