Pagination to group screen

--- a/templates/Schedule/main.html.twig
+++ b/templates/Schedule/main.html.twig
@@ -10,8 +10,8 @@
                 </div>
             </div>
         {% else %}
-        <a href="{{ path('schedule_create') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Modificar horario</a>
         <div class="table_container">
+            {% set weekdays = {1: 'Lunes', 2: 'Martes', 3: 'Miércoles', 4: 'Jueves', 5: 'Viernes'} %}
             <h2 class="titulo">Horario de {{ app.user.driver }}</h2>
             <table>
                 <thead>
@@ -24,7 +24,7 @@
                 <tbody>
                 {% for schedule in schedules %}
                     <tr>
-                        <td><a href="{{ path('schedule_update', {'id':schedule.id}) }}">{{ schedule.weekDay }}</a></td>
+                        <td><a href="{{ path('schedule_update', {'id':schedule.id}) }}">{{ weekdays[schedule.weekDay] }}</a></td>
                         <td>{{ schedule.entrySlot }}</td>
                         <td>{{ schedule.exitSlot }}</td>
                     </tr>
