--- a/templates/Groups/main.html.twig
+++ b/templates/Groups/main.html.twig
@@ -48,6 +48,10 @@
                 {% endfor %}
                 </tbody>
             </table>
+            {# display navigation #}
+            <div class="paginator">
+                {{ knp_pagination_render(pagination) }}
+            </div>
         </div>
     </div>
 {% endblock %}
