--- a/templates/Users/main.html.twig
+++ b/templates/Users/main.html.twig
@@ -30,7 +30,7 @@
                 </tbody>
             </table>
             {# display navigation #}
-            <div class="navigation">
+            <div class="paginator">
                 {{ knp_pagination_render(pagination) }}
             </div>
         </div>
