Correcting name in templates and coding NonSchoolDay

--- a/templates/schedule/main.html.twig
+++ b/templates/schedule/main.html.twig
@@ -31,6 +31,9 @@
                 {% endfor %}
                 </tbody>
             </table>
+            <div class="button_container">
+                <a href="{{ path('user_panel') }}" class="secondaryButton">Volver</a>
+            </div>
         </div>
         {% endif %}
     </div>
