--- a/templates/timeTable/main.html.twig
+++ b/templates/timeTable/main.html.twig
@@ -4,6 +4,7 @@
     <div class="container">
         <div class="button_container">
             <a href="#" class="primaryButton"><i class="ti ti-table-plus"></i>Generar Cuadrante</a>
+            <a href="{{ path('app_non_school_day') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Dias festivos</a>
         </div>
         <div class="table_container">
 
