--- a/templates/users/panel.html.twig
+++ b/templates/users/panel.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-        {% include 'Users/card_personal.html.twig' %}
-        {% include 'Schedule/card.html.twig' %}
+        {% include 'users/card_personal.html.twig' %}
+        {% include 'schedule/card.html.twig' %}
     </div>
 {% endblock %}
