--- a/templates/timeTable/main.html.twig
+++ b/templates/timeTable/main.html.twig
@@ -3,11 +3,33 @@
 {% block body %}
     <div class="container">
         <div class="button_container">
-            <a href="#" class="primaryButton"><i class="ti ti-table-plus"></i>Generar Cuadrante</a>
             <a href="{{ path('app_non_school_day') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Dias festivos</a>
         </div>
-        <div class="table_container">
-
+            <div class="table_container">
+                <table class="tabla">
+                    <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Origen</th>
+                        <th>Destino</th>
+                        <th>Participantes</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for group in groups %}
+                        <tr>
+                            <td>
+                                <a href="{{ path('timetable_mod', {'id':group.id}) }}">
+                                    {{ group.name }}
+                                </a>
+                            </td>
+                            <td>{{ group.origin }}</td>
+                            <td>{{ group.destination }}</td>
+                            <td>{{ group.drivers.count }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
 {% endblock %}
