Generating trips screen

--- a/templates/non_school_day/index.html.twig
+++ b/templates/non_school_day/index.html.twig
@@ -9,9 +9,9 @@
             <table class="tabla">
 
             </table>
-        </div>
-        <div class="button_container">
-            <a href="{{ path('timetable_main') }}" class="secondaryButton">Volver</a>
+            <div class="button_container">
+                <a href="{{ path('timetable_mod', {'id':group}) }}" class="secondaryButton"><i class="ti ti-table-plus"></i>Volver</a>
+            </div>
         </div>
     </div>
 {% endblock %}
