--- a/templates/timeTable/modificar.html.twig
+++ b/templates/timeTable/modificar.html.twig
@@ -2,10 +2,12 @@
 
 {% block body %}
     <div class="container">
+        <h2 class="titulo">Id Grupo {{ group }}</h2>
+        <div class="button_container">
+            <a href="{{ path('trip_new', {'id':group}) }}" class="primaryButton"><i class="ti ti-table-plus"></i>Generar Cuadrante</a>
+            <a href="{{ path('app_non_school_day', {'id':group}) }}" class="primaryButton"><i class="ti ti-table-plus"></i>Dias festivos</a>
+        </div>
         <div class="table_container">
-            <div class="button_container">
-                <a href="#" class="primaryButton"><i class="ti ti-table-plus"></i>Generar Cuadrante</a>
-            </div>
             <table class="tabla">
                 <thead>
                 <tr>
@@ -27,7 +29,7 @@
                 </tbody>
             </table>
             <div class="button_container">
-                <a href="{{ path('timetable_main') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Volver</a>
+                <a href="{{ path('timetable_main') }}" class="secondaryButton"><i class="ti ti-table-plus"></i>Volver</a>
             </div>
         </div>
     </div>
