--- a/templates/timeTable/main.html.twig
+++ b/templates/timeTable/main.html.twig
@@ -2,6 +2,13 @@
 
 {% block body %}
     <div class="container">
+        {% if is_granted('ROLE_GROUP_ADMIN') %}
+            {% if app.request.attributes.get('_route')=='timetable_main' %}
+                <a href="{{ path('timeTable_filter') }}" class="primaryButton">Ver mis cuadrantes</a>
+            {% else %}
+                <a href="{{ path('timetable_main') }}" class="primaryButton">Volver</a>
+            {% endif %}
+        {% endif %}
             <div class="table_container">
                 <table class="tabla">
                     <thead>
