--- a/templates/groups/modificar.html.twig
+++ b/templates/groups/modificar.html.twig
@@ -19,7 +19,7 @@
             {{ form_end(form) }}
         </div>
         <div class="button_container">
-            <a href="{{ path('group_main') }}" class="secondaryButton">Volver</a>
+            <a href="{{ path('group_main') }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
         </div>
     </div>
 
