--- a/templates/timeTable/modificar.html.twig
+++ b/templates/timeTable/modificar.html.twig
@@ -30,7 +30,7 @@
                 </tbody>
             </table>
             <div class="button_container">
-                <a href="{{ path('timetable_main') }}" class="secondaryButton"><i class="ti ti-table-plus"></i>Volver</a>
+                <a href="{{ path('timetable_main') }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
             </div>
         </div>
     </div>
