--- a/templates/users/modificar.html.twig
+++ b/templates/users/modificar.html.twig
@@ -9,7 +9,7 @@
                 <h2>Datos del usuario</h2>
             {% endif %}
             {{ form_start(form) }}
-            {{ form_widget(form) }}
+            {{ form_row(form) }}
             <div class="buttons">
                 <button type="submit" class="primaryButton">Guardar</button>
                 {% if driver.id is not null %}
@@ -19,7 +19,7 @@
             {{ form_end(form) }}
         </div>
         <div class="button_container">
-            <a href="{{ path('driver_main') }}" class="secondaryButton">Volver</a>
+            <a href="{{ path('driver_main') }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
         </div>
     </div>
 
