--- a/templates/trip/new.html.twig
+++ b/templates/trip/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container">
     <h1 class="titulo">Detalles del Cuadrante</h1>
-    <h2 class="titulo">Time Table ID: {{ timeTableId }}</h2>
+    <h2 class="titulo">Cuadrante del grupo con ID: {{ timeTableId }}</h2>
     <h2 class="titulo">Conductores</h2>
     <div class="table_container">
         <table class="tabla">
