--- a/templates/timeTable/modificar.html.twig
+++ b/templates/timeTable/modificar.html.twig
@@ -4,8 +4,8 @@
     <div class="container">
         {% if is_granted('ROLE_GROUP_ADMIN') %}
             <div class="button_container">
-                <a href="{{ path('trip_new', {'id':group}) }}" class="primaryButton"><i class="ti ti-table-plus"></i>Generar Cuadrante</a>
-                <a href="{{ path('app_non_school_day', {'id':group}) }}" class="primaryButton"><i class="ti ti-table-plus"></i>Dias festivos</a>
+                <a href="{{ path('trip_new', {'id':group.id}) }}" class="primaryButton"><i class="ti ti-table-plus"></i>Generar Cuadrante</a>
+                <a href="{{ path('app_non_school_day', {'id':group.id}) }}" class="primaryButton"><i class="ti ti-table-plus"></i>Dias festivos</a>
             </div>
         {% endif %}
         <div class="table_container">
