--- a/templates/trip/index.html.twig
+++ b/templates/trip/index.html.twig
@@ -28,7 +28,7 @@
                 </tbody>
             </table>
             <div class="button_container">
-                <a href="{{ path('timetable_mod', {'id':group}) }}" class="secondaryButton"><i class="ti ti-table-plus"></i>Volver</a>
+                <a href="{{ path('timetable_mod', {'id':group}) }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
             </div>
         </div>
     </div>
