--- a/templates/notify/main.html.twig
+++ b/templates/notify/main.html.twig
@@ -2,7 +2,9 @@
 
 {% block body %}
     <div class="container">
-        <a href="{{ path('new_absence') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Nuevo ausencia</a>
+        <div class="button_container">
+            <a href="{{ path('new_absence') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Nuevo ausencia</a>
+        </div>
         <div class="table_container">
             <table class="tabla">
                 <thead>
