--- a/templates/non_school_day/index.html.twig
+++ b/templates/non_school_day/index.html.twig
@@ -10,7 +10,8 @@
         </div>
         <div class="table_container">
             <table class="tabla">
-
+                <thead></thead>
+                <tbody></tbody>
             </table>
         </div>
     </div>
