--- a/templates/timeTable/main.html.twig
+++ b/templates/timeTable/main.html.twig
@@ -24,7 +24,7 @@
                     <tbody>
                     {% for group in groups %}
                         <tr>
-                            <td>
+                            <td class="link_td">
                                 <a href="{{ path('timetable_mod', {'id':group.id}) }}">
                                     {{ group.name }}
                                 </a>
