--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
             <link href="{{ asset('css/reset.css')}}" type="text/css" rel="stylesheet">
             <link href="{{ asset('css/navbar.css')}}" type="text/css" rel="stylesheet">
             <link href="{{ asset('css/sweetAlert.css')}}" type="text/css" rel="stylesheet">
+            <link href="{{ asset('css/ExpansibleCard.css')}}" type="text/css" rel="stylesheet">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
             <link rel="stylesheet" href="{{ asset('build/app.css') }}">
             <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
@@ -19,6 +20,7 @@
             {{ encore_entry_script_tags('app') }}
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
             <script type="text/javascript" src="{{ asset('js/sidebar.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/ExpandibleCard.js') }}"></script>
             <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script src="{{ asset('build/app.js') }}"></script>
