--- a/templates/schedule/main.html.twig
+++ b/templates/schedule/main.html.twig
@@ -41,7 +41,7 @@
                                         {% set isWithinSchedule = true %}
                                     {% endif %}
                                 {% endfor %}
-                                <td class="{% if isWithinSchedule %}active{% endif %}"></td>
+                                <td class="{% if isWithinSchedule %}active_hour{% endif %}"></td>
                             {% endfor %}
                         </tr>
                     {% endfor %}
