--- a/templates/notify/main.html.twig
+++ b/templates/notify/main.html.twig
@@ -5,31 +5,66 @@
         <div class="button_container">
             <a href="{{ path('new_absence') }}" class="primaryButton"><i class="ti ti-table-plus"></i>Nuevo ausencia</a>
         </div>
-        <div class="table_container">
-            <table class="tabla">
-                <thead>
-                <tr>
-                    <th>Fecha</th>
-                    <th>Descripción</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for absence in absences %}
-                    <tr>
-                        <td class="link_td">
-                            <a href="{{ path('mod_absence', {'id':absence.id}) }}">
-                                {{ absence.absenceDate | date('Y-m-d') }}
-                            </a>
-                        </td>
-                        <td>{{ absence.description }}</td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="2">No hay notificaciones</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+        <div class="card_container">
+            {% for absence in absences %}
+            <div class="expandable-container">
+                    <div class="expandable">
+                        <span class="title">{{ absence.description }}</span>
+                        <div class="icons">
+                            <a href="{{ path('mod_absence', {'id':absence.id}) }}" class="btn edit"><i class="ti ti-edit" style="font-size: 1.5rem"></i></a>
+                            <a href="#" class="btn delete" onclick="confirmDelete({{ absence.id }})"><i class="ti ti-trash" style="font-size: 1.5rem"></i></a>
+                            <span class="icon"><i class="ti ti-caret-down-filled" style="font-size: 1.5rem"></i></span>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="card-grid">
+                            <div class="expanded_card">
+                                <p class="label">Fecha:</p>
+                                <p class="value">{{ absence.absenceDate | date('Y-m-d') }}</p>
+                            </div>
+                        </div>
+                    </div>
+            {% else %}
+                <h2 class="titulo">No hay notificaciones</h2>
+            {% endfor %}
         </div>
     </div>
+
+    <script>
+        function confirmDelete(id) {
+            Swal.fire({
+                title: '¿Estás seguro?',
+                text: "¡No podrás recuperar esta notificación de ausencia!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#8E6C88',
+                cancelButtonColor: '#80CED7',
+                confirmButtonText: 'Sí, eliminarlo',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: '{{ path('absence_delete', {'id': 'ID_PLACEHOLDER'}) }}'.replace('ID_PLACEHOLDER', id),
+                        type: 'DELETE',
+                        success: function(response) {
+                            Swal.fire(
+                                '¡Eliminado!',
+                                'La notificacion de ausencia ha sido eliminado.',
+                                'success'
+                            ).then(() => {
+                                window.location.href = '{{ path('notify_main') }}';
+                            });
+                        },
+                        error: function(xhr) {
+                            Swal.fire(
+                                'Error',
+                                'Hubo un problema al eliminar la notificación de ausencia.',
+                                'error'
+                            );
+                        }
+                    });
+                }
+            })
+        }
+    </script>
 {% endblock %}
